This is the Alpha version of Momentum Desktop App. Still works only on windows OS as of now. Tested on win10. Version 0.2

--- a/App/Resources/Stylesheet/Motivation_Activity.css
+++ b/App/Resources/Stylesheet/Motivation_Activity.css
@@ -20,3 +20,13 @@
     -fx-text-alignment: center;
 
 }
+
+.ButtonGetShitDone.TimerRunning {
+    -fx-background-color: #009688;
+    -fx-background-radius: 30;
+}
+
+.ButtonGetShitDone.TimerStopped {
+    -fx-background-color: #00b4ff;
+    -fx-background-radius: 30;
+}
